examples/type_system/failing/136_tuple_projection_precise_mismatch.flx
fn main() -> Unit {
    let value: Int = (1, "s").1
}
